--- a/views/join.pug
+++ b/views/join.pug
@@ -1,4 +1,11 @@
 extends layouts/main
 
 block content
-    h1 Join
+    .form-container
+        form(action=routes.join, method='post')
+            input(type='file', accept='image/*')
+            input(type='text', placeholder='user name', name='name')
+            input(type='email', placeholder='email', name='email')
+            input(type='password', placeholder='password', name='password')
+            input(type='password', placeholder='repeat password', name='password2')
+            input(type='submit', value='Sign Up')
